--- a/css/index.css
+++ b/css/index.css
@@ -129,8 +129,8 @@ header nav #about {
   flex-direction: column;
   margin: 5rem;
   height: 30rem;
-  background-image: url(/assets/home.png);
   background-size: cover;
+  background-repeat: no-repeat;
 }
 .title-container button {
   color: black;
@@ -155,6 +155,9 @@ header nav #about {
   justify-content: space-evenly;
   align-items: flex-start;
   flex-wrap: wrap;
+  padding-top: 5rem;
+  border-top: 2px solid lightgray;
+  border-radius: 300px;
 }
 @media (max-width: 500px) {
   .artists-container {
